Fix non-linebreak in code blocks

--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ a:hover {
 }
 
 .post code {
+  display: block;
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .2em;
